--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "chillerlan/php-qrcode": "^5.0",
         "dompdf/dompdf": "^3.1",
         "fpdf/fpdf": "^1.86",
         "laravel/framework": "^12.0",
