--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fpdf/fpdf": "^1.86",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "phpoffice/phppresentation": "dev-master",
         "tecnickcom/tcpdf": "^6.9"
     },
     "require-dev": {
