--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "phpoffice/phppresentation": "dev-master",
+        "phpoffice/phpspreadsheet": "^3.9",
         "spatie/array-to-xml": "^3.4",
         "tecnickcom/tcpdf": "^6.9"
     },
