--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fpdf/fpdf": "^1.86",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6",
         "phpoffice/phppresentation": "dev-master",
         "phpoffice/phpspreadsheet": "^3.9",
         "spatie/array-to-xml": "^3.4",
